<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mainpage">

    <ScrollView
        android:layout_width="311dp"
        android:layout_height="520dp"
        android:fillViewport="true"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:contentDescription="@string/imgWorkouticon"
                app:srcCompat="@drawable/workouticon" />

            <Button
                android:id="@+id/btnViewWorkouts"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/btnViewWorkouts" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="148dp"
                android:contentDescription="@string/imgViewTimer"
                app:srcCompat="@drawable/timericon" />

            <Button
                android:id="@+id/btnViewTimer"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/btnViewTimer" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="231dp"
                android:contentDescription="@string/btnCalorieCalculator"
                app:srcCompat="@drawable/calculator" />

            <Button
                android:id="@+id/btnCalorieCalculator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnCalorieCalculator" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="231dp"
                android:contentDescription="@string/imgChecklist"
                app:srcCompat="@drawable/history" />

            <Button
                android:id="@+id/btnViewHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnViewHistory" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>